--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -22,17 +22,18 @@ jobs:
         cat adrules_domainset.txt multi.txt | sed '/^#/d' | sort | uniq > combined.txt
         awk '/^\+\./ {gsub(/^\+/, "*"); print}' combined.txt > exclude_list.txt
         awk 'NR==FNR {exclude[$0]; next} !($0 in exclude)' exclude_list.txt combined.txt | sort | uniq > ADs_merged_temp.txt
-        RULES_COUNT=$(wc -l < ADs_merged_temp.txt)
-        UPDATE_TIME=$(date +"%Y-%m-%d %H:%M:%S")
-        echo -e "# 更新时间: $UPDATE_TIME\n# 规则数量: $RULES_COUNT\n$(cat ADs_merged_temp.txt)" > ADs_merged.txt
+        curl -skLo mihomo.gz https://github.com/MetaCubeX/mihomo/releases/download/v1.18.8/mihomo-linux-amd64-v1.18.8.gz
+        gzip -d mihomo.gz
+        chmod +x mihomo
+        ./mihomo convert-ruleset domain text ADs_merged_temp.txt ADs_merged.mrs
 
     - name: Commit and push changes
       run: |
-        mv ADs_merged.txt rules/
+        mv ADs_merged.mrs rules/
         CURRENT_TIME=$(date +"%Y-%m-%d %H:%M")
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
-        git add rules/ADs_merged.txt
+        git add rules/ADs_merged.mrs
         git commit -m "Auto Update $CURRENT_TIME" -a || echo "No changes to commit"
         git push origin master
 
