--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -20,7 +20,7 @@ tcp-concurrent: true
 external-ui: ui
 external-ui-name: metacubexd
 external-controller: 0.0.0.0:9090
-external-ui-url: https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip
+external-ui-url: https://ghp.ci/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip
 
 keep-alive-idle: 600
 keep-alive-interval: 15
