block some HTTPDNS

--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -25,12 +25,6 @@ external-ui-url: https://ghp.ci/https://github.com/MetaCubeX/metacubexd/archive/
 keep-alive-idle: 600
 keep-alive-interval: 15
 
-geodata-mode: false
-geox-url:
-  geoip: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geoip-lite.dat"
-  geosite: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geosite.dat"
-  mmdb: "https://raw.githubusercontent.com/NobyDa/geoip/release/Private-GeoIP.mmdb"
-
 profile:
   store-selected: true
   store-fake-ip: true
@@ -48,39 +42,34 @@ sniffer:
     QUIC:
       ports: [443, 8443]
   skip-domain:
-    - "Mijia Cloud"
-    - "+.push.apple.com"
+    - 'Mijia Cloud'
+    - '+.push.apple.com'
 
 tun:
   enable: true
   stack: mixed
   device: JRAN
   endpoint-independent-nat: true
-  auto-route: false
-  auto-redirect: false
-  auto-detect-interface: false
 
 dns:
   enable: true
   ipv6: false
   listen: 0.0.0.0:1053
   enhanced-mode: redir-host
-  use-hosts: false
-  use-system-hosts: false
   fake-ip-filter:
-    - "+.lan"
-    - "+.local"
-    - "+.market.xiaomi.com"
+    - '+.lan'
+    - '+.local'
+    - '+.market.xiaomi.com'
   nameserver:
     - 223.5.5.5
     - 180.184.1.1
   nameserver-policy:
-    "*": 127.0.0.1#lo
-    "+.lan": 127.0.0.1#lo
-    "+.local": 127.0.0.1#lo
-    "geosite:geolocation-!cn":
-      - https://doh.apad.pro/dns-query
-      - https://223.5.5.5/dns-query
+    '*': 127.0.0.1#lo
+    '+.lan': 127.0.0.1#lo
+    '+.local': 127.0.0.1#lo
+    'geosite:geolocation-!cn':
+      - 'https://8.8.8.8/dns-query#节点选择'
+      - 'https://9.9.9.9/dns-query#节点选择'
 
 proxy-groups:
   - {name: 节点选择, icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png, type: select, proxies: [自动选择, 🇭🇰 香港, 🇼🇸 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 其他, DIRECT]}
@@ -110,6 +99,7 @@ proxy-groups:
 rules:
   - RULE-SET,custom_direct,DIRECT
   - RULE-SET,custom_proxy,节点选择
+  - RULE-SET,httpdns,REJECT
   - RULE-SET,custom_reject,REJECT
   - RULE-SET,ADs_merged,REJECT
   - RULE-SET,biliintl,节点选择
@@ -218,3 +208,6 @@ rule-providers:
   cn_ip:
     <<: *mrsip
     url: "https://github.com/MetaCubeX/meta-rules-dat/raw/meta/geo/geoip/cn.mrs"
+  httpdns:
+    <<: *mrs 
+    url: "https://github.com/MetaCubeX/meta-rules-dat/raw/meta/geo/geosite/category-httpdns-cn.mrs"
