--- a/rules/custom.yaml
+++ b/rules/custom.yaml
@@ -10,6 +10,5 @@ payload:
   - "+.gitmirror.com"
   - "+.sharepoint.cn"
   - "+.steamserver.net"
-  - "ehffou.xyz"
   - "sub.nexconvert.com"
-  - "ieginh.lol"
+  - "ghp.ci"
