--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -1,12 +1,12 @@
 # 策略组相关
 pr: &pr {type: select, proxies: [节点选择, 🇭🇰 香港, 🇼🇸 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 其他, DIRECT]}
-url-test: &url-test {type: url-test, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true}
-fallback: &fallback {type: fallback, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true}
+url-test: &url-test {type: url-test, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true, exclude-filter: "LAN"}
+fallback: &fallback {type: fallback, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true, exclude-filter: "LAN"}
 # 这里是订阅更新和延迟测试相关的
 p: &p {type: http, interval: 86400, health-check: {enable: true, url: "https://latency-test.skk.moe/endpoint", interval: 600}}
 
 proxies:
-  - {name: LAN, type: direct, udp: true, interface-name: lan}
+  - {name: LAN, type: direct, udp: true, interface-name: br-lan}
 
 # https://hub.docker.com/r/xream/sub-store
 proxy-providers:
@@ -107,7 +107,7 @@ proxy-groups:
   - {name: 🇸🇬 新加坡, <<: *url-test, filter: "🇸🇬|新加坡|狮|SG|Singapore"}
   - {name: 🇯🇵 日本, <<: *url-test, filter: "🇯🇵|日本|东京|JP|Japan"}
   - {name: 🇼🇸 台湾, <<: *url-test, filter: "🇨🇳|🇹🇼|台湾|TW|Tai|Taiwan"}
-  - {name: 其他, <<: *url-test, exclude-filter: "HK|US|SG|JP|TW"}
+  - {name: 其他, <<: *url-test, exclude-filter: "HK|US|SG|JP|TW|LAN"}
 
 rules:
   - DST-PORT,3478/19302,DIRECT
