--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -33,9 +33,11 @@ jobs:
         CURRENT_TIME=$(date +"%Y-%m-%d %H:%M")
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
-        git add rules/ADs_merged.mrs
-        git commit -m "Auto Update $CURRENT_TIME" -a || echo "No changes to commit"
-        git push origin master
+        git checkout --orphan mihomo
+        git rm -rf .
+        git add rules/*
+        git commit -m "Auto Update $CURRENT_TIME"
+        git push -f origin mihomo
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
